@@ -1,0 +1,2 @@
+path|title|description
+/file1.txt|File 1|File 1 description
